--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </div>
           </div>
           <div data-aos="fade-down" class="w-full object-fill md:w-1/2 bg-blue-50 flex justify-center md:justify-end align-middle">
-            <img src="./Imggs/doc1.jpeg" alt="" class="">
+            <img src="./Imggs/freshdoc-removebg-preview.png" alt="" class="md:w-[90%]">
           </div>
         </div>
 
@@ -413,10 +413,10 @@
           </div>
         </div>
         <div class="w-full md:w-1/2 p-8 shadow-lg">
-          <img data-aos="fade-right" src="./Imggs/Ddoc.jpeg" alt="" class="rounded-t-3xl w-full mb-4">
+          <img data-aos="fade-right" src="./Imggs/cmd-removebg-preview.png" alt="" class="rounded-t-3xl w-full mb-4">
           <div class="bg-blue-100 p-6">
-            <h1 data-aos="fade-right"  class="font-bold text-sm text-gray-800">DR OLADEJI, (MB;BS, MSc, FWACS, FRCS )</h1>
-            <p data-aos="fade-right" class="text-gray-500 text-sm">Consultant Radiology and Clinical Oncology</p>
+            <h1 data-aos="fade-right"  class="font-bold text-sm text-gray-800">DR Aolabi Adebayo OLADEJI, (MB;BS, MSc, FWACS, FMCR )</h1>
+            <p data-aos="fade-right" class="text-gray-500 text-sm">Consultant Radiation and Clinical Oncologist</p>
             <p data-aos="fade-right" class="text-gray-500 text-sm">Chief Medical Director</p>
             <p data-aos="fade-right" class="text-gray-500 text-sm">Alpha Specialist Hospital</p>
           </div>
@@ -819,6 +819,17 @@
               <h2 class="text-slate-100 text-2xl font-bold">LABORATORY</h2>
             </div>
             <p class="text-gray-300 text-center py-3">Our well-equipped laboratory facilitates a wide range of diagnostic tests, allowing for timely and accurate assessment of various medical conditions, contributing to effective patient care.</p>
+            <a href='#Contacts'>
+              <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
+
+            </a>
+          </div>
+          <!-- Card -->
+          <div class=" md:block w-full  min-h-64 rounded-sm transition-all duration-300 border-4 text-center border-gray-400 p-4 py-8 md:w-72 hover:translate-y-3 justify-around align-middle bg-teal-600 bg-center bg-cover bg-no-repeat bg-blend-multiply" style="background-image: url(./Imggs/radiology.jpg);">
+            <div id="title">
+              <h2 class="text-slate-100 text-2xl font-bold">Radiology</h2>
+            </div>
+            <p class="text-gray-300 text-center py-3">Our state-of-the-art radiology department offers an extensive range of diagnostic imaging services, including X-rays, MRI, CT scans, ultrasounds, and PET scans. Our advanced imaging technologies enable precise diagnosis and aid in treatment planning for various medical conditions.</p>
             <a href='#Contacts'>
               <button class="bg-transparent py-2 px-4 rounded-full text-slate-100 shadow-md hover:bg-blue-500 border-slate-200 border-2">Read more ></button>
 
